# tera-server-rs

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  RustConfig  build.rs  dockerfile  vars.env
src/: controllers.rs  main.rs  router.rs  run_server.rs  server.rs
src/public/pages/: home.html
static/assets/: main.css
static/pages/: 404.html  base.html  calculate.html  christmas.html  db.html  detail.html  fibonacci.html  index.html  multipart_image.html  rectangles.html  temp_convert.html  triplets.html
static/partials/: nav.html
