[package]
name = "server"
version = "0.1.0"
authors = ["alexgnatrow <lesha.gnat@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-beta.4"
actix-files = "0.1.0-beta.4"
listenfd = "0.3"
tera="0.11"
log = "0.4.0"
env_logger = "0.6.0"
serde="1"
serde_derive="1"
serde_json="1.0.38"
lazy_static = "1.2.0"
futures="*"